// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Box component snapshot test 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    className="sc-bdfBwQ jyVkcv"
    placeholder="Search..."
  />
  <button
    className="sc-gsTCUz fTGdlx"
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Search Box component snapshot test with place holder props 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    className="sc-bdfBwQ jyVkcv"
    placeholder="place holder"
  />
  <button
    className="sc-gsTCUz fTGdlx"
    type="submit"
  >
    Search
  </button>
</form>
`;
